[gd_scene load_steps=131 format=3 uid="uid://bsx5o2bhaujvq"]

[ext_resource type="Script" uid="uid://c4nudrtx7785" path="res://scripts/player.gd" id="1_s4ay6"]
[ext_resource type="Texture2D" uid="uid://yex0qyciqmwr" path="res://art/Entities/Characters/Body_A/Animations/Hit_Base/Hit_Down-Sheet.png" id="2_eqdch"]
[ext_resource type="Texture2D" uid="uid://ct77ikg8xj4sn" path="res://art/Entities/Characters/Body_A/Animations/Collect_Base/Collect_Down-Sheet.png" id="2_p2nax"]
[ext_resource type="Texture2D" uid="uid://kfbl6k3vh3eb" path="res://art/Entities/Characters/Body_A/Animations/Collect_Base/Collect_Side-Sheet.png" id="3_m5li5"]
[ext_resource type="Texture2D" uid="uid://cjdu4ru263tpg" path="res://art/Entities/Characters/Body_A/Animations/Hit_Base/Hit_Side-Sheet.png" id="3_mllt6"]
[ext_resource type="Texture2D" uid="uid://d18uhsghekpve" path="res://art/Entities/Characters/Body_A/Animations/Collect_Base/Collect_Up-Sheet.png" id="4_52x8u"]
[ext_resource type="Texture2D" uid="uid://dvcrbjco81jv" path="res://art/Entities/Characters/Body_A/Animations/Hit_Base/Hit_Up-Sheet.png" id="4_lowl5"]
[ext_resource type="Texture2D" uid="uid://bhanm0vhxdd7k" path="res://art/Entities/Characters/Body_A/Animations/Death_Base/Death_Down-Sheet.png" id="5_an8qn"]
[ext_resource type="Texture2D" uid="uid://tk24duotp1xv" path="res://art/Entities/Characters/Body_A/Animations/Idle_Base/Idle_Down-Sheet.png" id="5_y8tx1"]
[ext_resource type="Texture2D" uid="uid://cq27xam2kmjqs" path="res://art/Entities/Characters/Body_A/Animations/Death_Base/Death_Side-Sheet.png" id="6_6bm75"]
[ext_resource type="Texture2D" uid="uid://vb0mgk6jiyjy" path="res://art/Entities/Characters/Body_A/Animations/Idle_Base/Idle_Side-Sheet.png" id="6_08bsj"]
[ext_resource type="Texture2D" uid="uid://bpl8lopfa3av2" path="res://art/Entities/Characters/Body_A/Animations/Idle_Base/Idle_Up-Sheet.png" id="7_eubhq"]
[ext_resource type="Texture2D" uid="uid://bvxe6jhxiivh0" path="res://art/Entities/Characters/Body_A/Animations/Death_Base/Death_Up-Sheet.png" id="7_vj1ur"]
[ext_resource type="Texture2D" uid="uid://bk8qmke3566c1" path="res://art/Entities/Characters/Body_A/Animations/Walk_Base/Walk_Down-Sheet.png" id="8_8le08"]
[ext_resource type="Texture2D" uid="uid://cmtk57yy3dpqt" path="res://art/Entities/Characters/Body_A/Animations/Walk_Base/Walk_Side-Sheet.png" id="9_ky46c"]
[ext_resource type="Texture2D" uid="uid://bqm4bfuaq4xhp" path="res://art/Entities/Characters/Body_A/Animations/Walk_Base/Walk_Up-Sheet.png" id="10_p2nax"]
[ext_resource type="Texture2D" uid="uid://b4g1cc1728rs" path="res://art/Entities/Characters/Body_A/Animations/Run_Base/Run_Down-Sheet.png" id="14_52ajj"]
[ext_resource type="Texture2D" uid="uid://csmks6tj4eofi" path="res://art/Entities/Characters/Body_A/Animations/Run_Base/Run_Side-Sheet.png" id="15_j2lrx"]
[ext_resource type="Texture2D" uid="uid://dx4drgvmygn7x" path="res://art/Entities/Characters/Body_A/Animations/Run_Base/Run_Up-Sheet.png" id="16_qmwao"]

[sub_resource type="AtlasTexture" id="AtlasTexture_txj7h"]
atlas = ExtResource("2_p2nax")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86v0i"]
atlas = ExtResource("2_p2nax")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmivb"]
atlas = ExtResource("2_p2nax")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpw8p"]
atlas = ExtResource("2_p2nax")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvnvi"]
atlas = ExtResource("2_p2nax")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ev807"]
atlas = ExtResource("2_p2nax")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7regl"]
atlas = ExtResource("2_p2nax")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdtj2"]
atlas = ExtResource("2_p2nax")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_onnfj"]
atlas = ExtResource("3_m5li5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwana"]
atlas = ExtResource("3_m5li5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv2pw"]
atlas = ExtResource("3_m5li5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5tvf"]
atlas = ExtResource("3_m5li5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_486f8"]
atlas = ExtResource("3_m5li5")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi6nb"]
atlas = ExtResource("3_m5li5")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uc4nx"]
atlas = ExtResource("3_m5li5")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijy63"]
atlas = ExtResource("3_m5li5")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqik1"]
atlas = ExtResource("4_52x8u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wb20"]
atlas = ExtResource("4_52x8u")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d0ie"]
atlas = ExtResource("4_52x8u")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyt8b"]
atlas = ExtResource("4_52x8u")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5prv"]
atlas = ExtResource("4_52x8u")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0y3a"]
atlas = ExtResource("4_52x8u")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08rxx"]
atlas = ExtResource("4_52x8u")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqowg"]
atlas = ExtResource("4_52x8u")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lapi8"]
atlas = ExtResource("5_an8qn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjj5l"]
atlas = ExtResource("5_an8qn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxdqv"]
atlas = ExtResource("5_an8qn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dshq"]
atlas = ExtResource("5_an8qn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwo6b"]
atlas = ExtResource("5_an8qn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjnuh"]
atlas = ExtResource("5_an8qn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_axhkk"]
atlas = ExtResource("5_an8qn")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eupqr"]
atlas = ExtResource("5_an8qn")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb1t5"]
atlas = ExtResource("6_6bm75")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2naow"]
atlas = ExtResource("6_6bm75")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtfrb"]
atlas = ExtResource("6_6bm75")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ink5"]
atlas = ExtResource("6_6bm75")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nywf7"]
atlas = ExtResource("6_6bm75")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikh6d"]
atlas = ExtResource("6_6bm75")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ykph"]
atlas = ExtResource("6_6bm75")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp726"]
atlas = ExtResource("6_6bm75")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26se6"]
atlas = ExtResource("7_vj1ur")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvkcf"]
atlas = ExtResource("7_vj1ur")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc7fq"]
atlas = ExtResource("7_vj1ur")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ok85"]
atlas = ExtResource("7_vj1ur")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tubkw"]
atlas = ExtResource("7_vj1ur")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_44e06"]
atlas = ExtResource("7_vj1ur")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tkp4"]
atlas = ExtResource("7_vj1ur")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_st4bc"]
atlas = ExtResource("7_vj1ur")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_eqdch")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_eqdch")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_eqdch")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("2_eqdch")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("3_mllt6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("3_mllt6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("3_mllt6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("3_mllt6")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("4_lowl5")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("4_lowl5")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("4_lowl5")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("4_lowl5")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("5_y8tx1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("5_y8tx1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("5_y8tx1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("5_y8tx1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("6_08bsj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("6_08bsj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("6_08bsj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("6_08bsj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("7_eubhq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("7_eubhq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("7_eubhq")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("7_eubhq")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rerg"]
atlas = ExtResource("14_52ajj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_70rq0"]
atlas = ExtResource("14_52ajj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7qtr"]
atlas = ExtResource("14_52ajj")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cckh3"]
atlas = ExtResource("14_52ajj")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyu7x"]
atlas = ExtResource("14_52ajj")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y27ii"]
atlas = ExtResource("14_52ajj")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln6d5"]
atlas = ExtResource("15_j2lrx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo4i"]
atlas = ExtResource("15_j2lrx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hijga"]
atlas = ExtResource("15_j2lrx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gigxx"]
atlas = ExtResource("15_j2lrx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjyxn"]
atlas = ExtResource("15_j2lrx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_va7au"]
atlas = ExtResource("15_j2lrx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ubyq"]
atlas = ExtResource("16_qmwao")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7af8a"]
atlas = ExtResource("16_qmwao")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5cod"]
atlas = ExtResource("16_qmwao")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8dve"]
atlas = ExtResource("16_qmwao")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n4er"]
atlas = ExtResource("16_qmwao")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5gqn"]
atlas = ExtResource("16_qmwao")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("8_8le08")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("8_8le08")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("8_8le08")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("8_8le08")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("8_8le08")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("8_8le08")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("9_ky46c")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("9_ky46c")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("9_ky46c")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("9_ky46c")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("9_ky46c")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("9_ky46c")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("10_p2nax")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("10_p2nax")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("10_p2nax")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("10_p2nax")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("10_p2nax")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("10_p2nax")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_h6w8y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txj7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86v0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmivb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpw8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvnvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ev807")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7regl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdtj2")
}],
"loop": true,
"name": &"collect_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onnfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xwana")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv2pw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5tvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_486f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi6nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uc4nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijy63")
}],
"loop": true,
"name": &"collect_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqik1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wb20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d0ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyt8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5prv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0y3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08rxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqowg")
}],
"loop": true,
"name": &"collect_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lapi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjj5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxdqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dshq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwo6b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjnuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axhkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eupqr")
}],
"loop": true,
"name": &"death_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb1t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2naow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtfrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ink5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nywf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikh6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ykph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp726")
}],
"loop": true,
"name": &"death_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26se6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvkcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc7fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ok85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tubkw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44e06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tkp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_st4bc")
}],
"loop": true,
"name": &"death_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}],
"loop": true,
"name": &"hit_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}],
"loop": true,
"name": &"hit_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}],
"loop": true,
"name": &"hit_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rerg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70rq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7qtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cckh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyu7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y27ii")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln6d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hijga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gigxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjyxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va7au")
}],
"loop": true,
"name": &"run_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ubyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7af8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5cod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8dve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n4er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5gqn")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s4ay6"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_eqdch"]
radius = 16.0

[node name="player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_s4ay6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_h6w8y")
animation = &"walk_up"
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_s4ay6")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_eqdch")

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="world_camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 460
limit_bottom = 240
limit_smoothed = true
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cliffside_camera" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 450
limit_bottom = 240

[node name="death_timer" type="Timer" parent="."]

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
